--- a/D_01_ITJS15013/D_01_ITJS15013.html
+++ b/D_01_ITJS15013/D_01_ITJS15013.html
@@ -10,7 +10,7 @@
     <body>
         <div>
             <center>
-            <h1>Dobrodosli na mesto namenjeno svim ljubiteljima<br> <i>prirode i planinarenja!</i></h1>
+            <h1>Dobrodosli na mesto namenjeno svim ljubiteljim<br> <i>prirode i planinarenja!</i></h1>
             <q>Ne zaboravite da preduzimate stvari korak po korak. Samo nastavite i popecete se do vrha!</q><br>
             <img src="https://c-va.niceshops.com/upload/image/banner/original/default/72782_a6742384.jpg" width="700px" id="prvaslika"/>
             </center>
