--- a/projekat1/index.html
+++ b/projekat1/index.html
@@ -51,17 +51,16 @@
                 <label for="placanje"><h2>PLACANJE:</h2></label>
 
                 <p>
-                    <input type="radio" name="placanje" id="input7"> Kes
+                    <input type="radio" name="placanje" id="input7" value="kes"> Kes
                 </p>
                 <p>
-                    <input type="radio" name="placanje" id="input8"> Kartica
+                    <input type="radio" name="placanje" id="input8" value="kartica"> Kartica
                 </p>
             </div>
             <!-- DUGMADI -->
             <div>
                 <input type="button" value="Izracunaj" id="Izracunaj">
-                <input type="reset" value="Resetuj">
-                
+                <input type="reset" value="Resetuj">               
             </div>
             <!-- PORUDZBINA -->
             <div>
