--- a/projekat1/index.html
+++ b/projekat1/index.html
@@ -10,6 +10,9 @@
         h2{
             color:purple
         }
+        .ljub{
+            color:purple
+        }
     </style>
 </head>
 <body>
@@ -63,13 +66,13 @@
                 <input type="reset" value="Resetuj">               
             </div>
             <!-- PORUDZBINA -->
-            <div>
+            <div class="ljub">
                 <h2>Vaša porudžbina:</h2>
                 <p id="slicice1"></p>
                 <p id="slicice2"></p>
                 <p id="slicice3"></p>
                 <p>Cena bez popusta je: <span id="cena"></span></p>
-                <p>Cena sa popustom je:<span id="cena2"></span></p>
+                <h3>Cena sa popustom je:<span id="cena2"></span></h3>
             </div>
         </fieldset>
     </form>
