--- a/projekat1/index.html
+++ b/projekat1/index.html
@@ -24,7 +24,7 @@
                 <p>
                     <input type="number" min="0" step="1"
                     oninput="validity.valid||(value='');"
-                    name="cvece" id="prviInput" placeholder="Cena po cvetu je 150 din."> Ruze 
+                    name="cvece" id="prviInput" placeholder= " &#127801 Cena po cvetu je 150 din." > Ruze 
                 </p>
                 <p>
                     <input type="number" min="0" step="1"
@@ -40,13 +40,13 @@
                 <label for="pokloni"><h2>ODABERITE POKLONE</h2></label>
 
                 <P>
-                    <input type="checkbox" name="pokloni" id="bombonjera" value="input4" > Bombonjera
+                    <input type="checkbox" name="pokloni" id="bombonjera" value="bombonjera" > Bombonjera
                 </P>
                 <p>
-                    <input type="checkbox" name="pokloni" id="cokolada" value="input5" > Cokolada
+                    <input type="checkbox" name="pokloni" id="cokolada" value="cokolada" > Cokolada
                 </p>
                 <p>
-                    <input type="checkbox" name="pokloni" id="sampanjac" value="input6"> Sampanjac
+                    <input type="checkbox" name="pokloni" id="sampanjac" value="sampanjac"> Sampanjac
                 </p>
             </div>
             <!-- PLACANJE -->
@@ -68,11 +68,14 @@
             <!-- PORUDZBINA -->
             <div class="ljub">
                 <h2>Vaša porudžbina:</h2>
-                <p id="slicice1"></p>
-                <p id="slicice2"></p>
-                <p id="slicice3"></p>
-                <p>Cena bez popusta je: <span id="cena"></span></p>
-                <h3>Cena sa popustom je:<span id="cena2"></span></h3>
+                <img src="" id="slika1">
+                <img src="" id="slika2">
+                <img src="" id="slika3">
+                <p id="plusBomb"></p>
+                <p id="plusCoko"></p>
+                <p id="plusSamp"></p>
+                <p>Cena bez popusta je: <span id="cena"></span> rsd</p>
+                <h3>Cena sa popustom je: <span id="cena2"></span> rsd</h3>
             </div>
         </fieldset>
     </form>
