--- a/projekat1/index.html
+++ b/projekat1/index.html
@@ -5,15 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 
-    <style>
-        h2{
-            color:purple
-        }
-        .ljub{
-            color:purple
-        }
-    </style>
 </head>
 <body>
     <form method="post">
@@ -63,14 +56,20 @@
             <!-- DUGMADI -->
             <div>
                 <input type="button" value="Izracunaj" id="Izracunaj">
-                <input type="reset" value="Resetuj">               
+                <input type="reset" value="Resetuj" onclick="">
             </div>
             <!-- PORUDZBINA -->
             <div class="ljub">
                 <h2>Vaša porudžbina:</h2>
+                <div>
                 <img src="" id="slika1">
+                </div>
+                <div>
                 <img src="" id="slika2">
+                </div>
+                <div>
                 <img src="" id="slika3">
+                </div>
                 <p id="plusBomb"></p>
                 <p id="plusCoko"></p>
                 <p id="plusSamp"></p>
