--- a/projekat 2 ponovo/projekat2.html
+++ b/projekat 2 ponovo/projekat2.html
@@ -13,7 +13,7 @@
     <div style="border:1px solid red">
         <h4 id="pitanje1"> 
         </h4>
-        <p><input type="radio" name="pitanje1" id="id1"     value="id1"></p>
+        <p><input type="radio" name="pitanje1" id="id1"     value="id1" checked></p>
         <p><input type="radio" name="pitanje1" id="id2" value="id2"></p>
         <p><input type="radio" name="pitanje1" id="id3" value="id3"></p>
         <p><input type="radio" name="pitanje1" id="id3" value="id4"></p>
@@ -23,7 +23,7 @@
     <div style="border:1px solid green">
         <h4 id="pitanje2"> 
         </h4>
-        <p><input type="radio" name="pitanje2" id="id5" value="id5"></p>
+        <p><input type="radio" name="pitanje2" id="id5" value="id5" checked></p>
         <p><input type="radio" name="pitanje2" id="id6" value="id6"></p>
         <p><input type="radio" name="pitanje2" id="id7" value="id7"></p>
         <p><input type="radio" name="pitanje2" id="id8" value="id8"></p>
@@ -33,7 +33,7 @@
     <div style="border:1px solid orange">
         <h4 id="pitanje3"> 
         </h4>
-        <p><input type="radio" name="pitanje3" id="id9" value="id9"></p>
+        <p><input type="radio" name="pitanje3" id="id9" value="id9" checked></p>
         <p><input type="radio" name="pitanje3" id="id10" value="id10"></p>
         <p><input type="radio" name="pitanje3" id="id11" value="id11"></p>
         <p><input type="radio" name="pitanje3" id="id12" value="id12"></p>
@@ -43,7 +43,7 @@
     <div style="border:1px solid purple"   >
         <h4 id="pitanje4"> 
         </h4>
-            <p><input type="radio" name="Pitanje4" id="id13" value="id13"></p>
+        <p><input type="radio" name="Pitanje4" id="id13" value="id13" checked></p>
         <p><input type="radio" name="Pitanje4" id="id14" value="id14"></p>
         <p><input type="radio" name="pitanje4" id="id15" value="id15"></p>
         <p><input type="radio" name="pitanje4" id="id16" value="id16"></p>
@@ -53,7 +53,7 @@
     <div style="border:1px solid blue">
         <h4 id="Pitanje5"> 
         </h4>
-        <p><input type="radio" name="Pitanje5" id="id17" value="id17"></p>
+        <p><input type="radio" name="Pitanje5" id="id17" value="id17" checked></p>
         <p><input type="radio" name="pitanje5" id="id18" value="id18"></p>
         <p><input type="radio" name="Pitanje5" id="id19" value="id19"></p>
         <p><input type="radio" name="Pitanje5" id="id20" value="id20"></p>
