--- a/projekat1/index.html
+++ b/projekat1/index.html
@@ -12,7 +12,7 @@
     <form method="post" >
         <fieldset style="border:none" id="forma">            
             <div>
-                <div><h1>CVEĆARA LILI</h1></div>
+                <div><h1>CVEĆARA CVEĆAR</h1></div>
                 <!-- CVECE -->
                 <label for="cvece"><h2>ODABERITE CVECE:</h2></label>
                 <p>
