--- a/projekat2_ITJS15013/index.html
+++ b/projekat2_ITJS15013/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <script src="script3.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
