--- a/ISPOCETKA_2/index.html
+++ b/ISPOCETKA_2/index.html
@@ -10,11 +10,7 @@
 <body>
     <div>
     <h1>MOJ PODSETNIK:</h1>
-    <ul id="list">
-        <li>Plati racune</li>
-        <li>Pripremi predavanja</li>
-        <li>Odgovori na mail</li>
-    </ul>
+    <ul id="list"></ul>
     </div>
     <div>
         <input type="text" name="tekst" id="tekst" placeholder="Unesite obavezu"> <br>
@@ -24,6 +20,6 @@
         <br>
         <input type="radio" name="radio" id="drugi" value="kraj"> Dodaj na kraj
     </div>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
