--- a/ISPOCETKA_3/index.html
+++ b/ISPOCETKA_3/index.html
@@ -11,9 +11,9 @@
     <div>
     <h1>MOJ PODSETNIK:</h1>
     <ul id="list">
-        <li class="task">Plati racune</li>
+        <!-- <li class="task">Plati racune</li>
         <li class="task">Pripremi predavanja</li>
-        <li class="task">Odgovori na mail</li>
+        <li class="task">Odgovori na mail</li> -->
     </ul>
     </div>
     <div>
