--- a/D_16_ITJS15013/index.html
+++ b/D_16_ITJS15013/index.html
@@ -5,17 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
     <h1>MOJ PODSETNIK:</h1>
-    <ul>
-        <li class="task">Plati racune</li>
-        <li class="task">Pripremi predavanja</li>
-        <li class="task">Odgovori na mail</li>
-    </ul>
+    <ul id="list"></ul>
     </div>
     <div>
         <input type="text" name="tekst" id="tekst" placeholder="Unesite obavezu"> <br>
